--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
   <div class="container">
     <div class="profile">
-      <img src="https://i.postimg.cc/zXNJbDLk/Imagem-do-Whats-App-de-2025-06-21-s-00-30-09-e4834389.jpg" alt="Lais Borges">
+      <img src="https://i.postimg.cc/Xv9vmjfn/Imagem-do-Whats-App-de-2025-05-28-s-23-32-24-22db53f3.jpg" alt="Ester Magalhães">
       <div class="online-indicator"></div>
     </div>
 
