--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Ester Magalhães - WhatsApp</title>
   <style>
     body {
@@ -90,13 +90,13 @@
 
   <div class="container">
     <div class="profile">
-      <img src="https://i.postimg.cc/Xv9vmjfn/Imagem-do-Whats-App-de-2025-05-28-s-23-32-24-22db53f3.jpg" alt="Ester Magalhães">
+      <img src="https://i.postimg.cc/Xv9vmjfn/Imagem-do-Whats-App-de-2025-05-28-s-23-32-24-22db53f3.jpg" alt="Ester Magalhães" />
       <div class="online-indicator"></div>
     </div>
 
-    <h2>Ester Magalhães</h2>
-    <p>21 anos</p>
-    <p>Bahia / São Paulo</p>
+    <h2>TETE MAGALHÃES</h2>
+    <p>19 anos</p>
+    <p>Bahia / Rio de Janeiro</p>
 
     <button class="btn-whatsapp" onclick="redirecionarWhatsApp()">Falar no WhatsApp</button>
   </div>
@@ -118,3 +118,4 @@
 
 </body>
 </html>
+
